--- a/css/foto-example.css
+++ b/css/foto-example.css
@@ -1,32 +1,1 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    font-family: Arial;
-}
-
-/* The grid: Four equal columns that floats next to each other */
-.column-foto {
-    float: left;
-    width: 25%;
-    padding: 10px;
-}
-
-/* Style the images inside the grid */
-.column-foto img {
-    opacity: 0.8; 
-    cursor: pointer; 
-}
-
-.column-foto img:hover {
-    opacity: 1;
-}
-
-/* Clear floats after the columns */
-.row-foto:after {
-    content: "";
-    display: table;
-    clear: both;
-}
+* { box-sizing: border-box; }body { margin: 0; font-family: Arial; }/* The grid: Four equal columns that floats next to each other */ .column-foto { float: left; width: 25%; padding: 10px; }/* Style the images inside the grid */ .column-foto img { opacity: 0.8; cursor: pointer; }.column-foto img:hover { opacity: 1; }/* Clear floats after the columns */ .row-foto:after { content: ""; display: table; clear: both; }
